core/traefik/10.0.28/CHANGELOG.md
# Changelog<br>


<a name="traefik-10.0.28"></a>
### [traefik-10.0.28](https://github.com/truecharts/apps/compare/traefik-10.0.27...traefik-10.0.28) (2021-12-19)

#### Chore

* Last patch bump before RC2 branch-off
* remove `editable: true` as this is the default ([#1576](https://github.com/truecharts/apps/issues/1576))



<a name="traefik-10.0.27"></a>
### [traefik-10.0.27](https://github.com/truecharts/apps/compare/traefik-10.0.26...traefik-10.0.27) (2021-12-19)

#### Chore

* App-Icon Organization ([#1539](https://github.com/truecharts/apps/issues/1539))
* update helm general non-major helm releases ([#1571](https://github.com/truecharts/apps/issues/1571))



<a name="traefik-10.0.26"></a>
### [traefik-10.0.26](https://github.com/truecharts/apps/compare/traefik-10.0.25...traefik-10.0.26) (2021-12-14)

#### Chore

* update helm general non-major helm releases ([#1535](https://github.com/truecharts/apps/issues/1535))



<a name="traefik-10.0.25"></a>
### [traefik-10.0.25](https://github.com/truecharts/apps/compare/traefik-10.0.24...traefik-10.0.25) (2021-12-13)

#### Chore

* move incubator apps to stable and bump everything



<a name="traefik-10.0.24"></a>
### [traefik-10.0.24](https://github.com/truecharts/apps/compare/traefik-10.0.23...traefik-10.0.24) (2021-12-12)

#### Chore

* update docker general non-major ([#1518](https://github.com/truecharts/apps/issues/1518))



<a name="traefik-10.0.23"></a>
### [traefik-10.0.23](https://github.com/truecharts/apps/compare/traefik-10.0.22...traefik-10.0.23) (2021-12-11)

#### Chore

* update general helm non-major helm releases ([#1509](https://github.com/truecharts/apps/issues/1509))



<a name="traefik-10.0.22"></a>
### [traefik-10.0.22](https://github.com/truecharts/apps/compare/traefik-10.0.21...traefik-10.0.22) (2021-12-07)

#### Chore

* update non-major deps helm releases ([#1481](https://github.com/truecharts/apps/issues/1481))



<a name="traefik-10.0.21"></a>
### traefik-10.0.21 (2021-12-05)

#### Chore

* bump apps to generate security page
* move all container references to TCCR ([#1448](https://github.com/truecharts/apps/issues/1448))
* update non-major deps helm releases ([#1471](https://github.com/truecharts/apps/issues/1471))
* update non-major deps helm releases ([#1468](https://github.com/truecharts/apps/issues/1468))
* update non-major deps helm releases ([#1453](https://github.com/truecharts/apps/issues/1453))
* update non-major ([#1449](https://github.com/truecharts/apps/issues/1449))
* update non-major deps helm releases ([#1432](https://github.com/truecharts/apps/issues/1432))

#### Fix

* fix typo in theme selection ([#1428](https://github.com/truecharts/apps/issues/1428))



<a name="traefik-10.0.20"></a>
### [traefik-10.0.20](https://github.com/truecharts/apps/compare/traefik-10.0.19...traefik-10.0.20) (2021-12-05)

#### Chore

* update non-major deps helm releases ([#1468](https://github.com/truecharts/apps/issues/1468))



<a name="traefik-10.0.19"></a>
### [traefik-10.0.19](https://github.com/truecharts/apps/compare/traefik-10.0.18...traefik-10.0.19) (2021-12-04)

